[tool.poetry]
name = "doc-import"
version = "0.1.0"
description = "Extracts metadata from documents and imports them into the FairLötet knowledge base."
authors = ["Sebastian Beschke <s.beschke@fairloetet.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
pypdf2 = "^1.26.0"
pydantic = "^1.6.1"
pdftitle = "^0.8"
"pdfminer.six" = "20200726"
spacy-nightly = "^3.0.0-rc.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
